--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>msg</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-lets go
 
 <script src="../node_modules/systemjs/dist/system.js"></script>
 <script src="../node_modules/jquery/dist/jquery.js"></script>
 <script src="../node_modules/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
 
+<!--
+<script src="../node_modules/angular/angular.js"></script>
+-->
+
 <script>
-    System.import ('config.js').then (function () {
+    System.import ('./config.js').then (function () {
         System.import ('app');
     }).catch (function ( err ) {
         console.error (err);
@@ -21,5 +24,8 @@ lets go
 </script>
 </body>
 
+    <app-root>
+        loading
+    </app-root>
 
 </html>
