--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
     <meta charset="UTF-8">
     <title>msg</title>
@@ -18,10 +18,6 @@
             console.error (err);
         })
     </script>
-
-    <app-root title="'Binding with Angular'">
-        loading
-    </app-root>
 
 </body>
 </html>
