--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>msg</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../dist/style.css">
 </head>
 <body class="container">
 
@@ -18,6 +18,10 @@
             console.error (err);
         })
     </script>
+
+    <div class="jumbotron" ng-controller="BindingController as $ctrl">
+        <h1 class="header">{{$ctrl.name}}</h1>
+    </div>
 
 </body>
 </html>
