--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,12 @@
         </div>
     </div>
 
+    <div class="input-group">
+        <span class="input-group-addon">name</span>
+        <input type="text" class="form-control" ng-model="$ctrl.name">
+    </div>
+
+
     <button class="btn btn-primary" ng-click="$ctrl.chgName( $event, 'heike' )">change name</button>
 </div>
 
