--- a/src/index.html
+++ b/src/index.html
@@ -72,5 +72,28 @@
     <button class="btn btn-primary" ng-click="$ctrl.chgName( $event, 'heike' )">change name</button>
 </div>
 
+<div class="row">
+    <div class="col-xs-12" ng-controller="ParentCtrl" style="background-color: red">
+        <div class="input-group col-xs-5">
+            <span class="input-group-addon">val1</span>
+            <input type="text" class="form-control" ng-model="val1">
+        </div>
+        <div class="input-group col-xs-5">
+            <span class="input-group-addon">val2</span>
+            <input type="text" class="form-control" ng-model="val2">
+        </div>
+        <div class="col-xs-6 col-xs-offset-6" ng-controller="ChildCtrl" style="background-color: yellow">
+            <div class="input-group">
+                <span class="input-group-addon">val1</span>
+                <input type="text" class="form-control" ng-model="val1">
+            </div>
+            <div class="input-group">
+                <span class="input-group-addon">val2</span>
+                <input type="text" class="form-control" ng-model="val2">
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
