--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,7 @@
     <div class="input-group">
         <span class="input-group-addon">name</span>
         <input type="text" class="form-control" ng-model="$ctrl.name"
-               ng-change="$ctrl.nameChanged()"
-               ng-keyup="$ctrl.keyUp($event)"
+               ng-paste="$ctrl.paste($event)"
         >
     </div>
     <div class="checkbox">
