--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>msg</title>
     <link rel="stylesheet" href="../dist/style.css">
+    <style type="text/css">@charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}ng\:form{display:block;}.ng-animate-shim{visibility:hidden;}.ng-anchor{position:absolute;}</style>
 </head>
 <body class="container">
 
@@ -20,7 +21,7 @@
 </script>
 
 <div class="jumbotron" ng-controller="BindingController as $ctrl">
-    <h1 class="header">{{$ctrl.name}}</h1>
+    <h1 class="header" ng-cloak="">{{$ctrl.name}}</h1>
 
     <div class="row">
         <div class="col-xs-4">
