--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>msg</title>
-    <link rel="stylesheet" href="../dist/style.css">
+    <link rel="stylesheet" href="./dist/style.css">
     <style type="text/css">@charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}ng\:form{display:block;}.ng-animate-shim{visibility:hidden;}.ng-anchor{position:absolute;}</style>
 </head>
 <body class="container">
@@ -26,14 +26,18 @@
 
 </div>
 <ul class="list-unstyled" ng-controller="UserController as $ctrl">
-    <li><strong>ngRepeat</strong></li>
-    <li ng-repeat="user in $ctrl.users | limitTo : 5 | orderBy : 'firstName' : true" 
-        ng-click="$ctrl.delete ($index)"
-        class="user"
-        ng-class-even="'even'"
-        ng-class-odd="'odd'">
-            [{{user.age}}] {{user.firstName}} {{user.lastName}}
-    </li>
+    <li><strong>date</strong></li>
+    <li>{{$ctrl.today}}</li>
+    <li>{{$ctrl.today | date }}</li>
+    <li>{{$ctrl.today | date : 'longDate' }}</li>
+    <li>{{$ctrl.today | date : 'EEEE, d. MMMM yyyy - HH:mm'}}</li>
+
+    <li><br><strong>Timezone</strong></li>
+
+    <li>{{$ctrl.today | date : 'EEEE, d. MMMM yyyy - HH:mm' : 'UTC'}}</li>
+    <li>{{$ctrl.today | date : 'EEEE, d. MMMM yyyy - HH:mm' : 'GMT+0200'}}</li>
+    <li>{{$ctrl.today | date : 'EEEE, d. MMMM yyyy - HH:mm' : 'GMT-0500'}}</li>
+
 </ul>
 
 
