--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>msg</title>
-    <link rel="stylesheet" href="./dist/style.css">
+    <link rel="stylesheet" href="../dist/style.css">
     <style type="text/css">@charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}ng\:form{display:block;}.ng-animate-shim{visibility:hidden;}.ng-anchor{position:absolute;}</style>
 </head>
 <body class="container">
@@ -25,18 +25,19 @@
     <h1 class="header" ng-cloak="">{{$ctrl.name}}</h1>
 
 </div>
-<ul class="list-unstyled" ng-controller="UserController as $ctrl">
-    <li><strong>number</strong></li>
-    <li>{{123.3456 }}</li>
-    <li>{{123.3456 | number }}</li>
-    <li>{{123.3456 | number : 1 }}</li>
-    <li>{{123.3456 | number : 2 }}</li>
-    <li>{{123.3456 | number : 3 }}</li>
-
-    <li><br><strong>Timezone</strong></li>
-    <li>{{123.3456 | currency }}</li>
-    <li>{{123.3456 | currency : '$' }}</li>
-    <li>{{123.3456 | currency : '$' : 3 }}</li>
+<ul class="list-unstyled container" ng-controller="UserController as $ctrl">
+    <li class="input-group row">
+        <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+        <input type="text" class="form-control" ng-model="$ctrl.search">
+    </li>
+    <li ng-repeat="user in $ctrl.users | filter : $ctrl.search "
+        ng-click="$ctrl.delete ($index)"
+        class="user row"
+        ng-class-even="'even'"
+        ng-class-odd="'odd'">
+        <span class="col-xs-6"><i class="glyphicon glyphicon-user"></i> {{user.firstName}}</span>
+        <span class="col-xs-6">{{user.lastName}}</span>
+    </li>
 
 </ul>
 
