--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,15 @@
 
 </div>
 <ul class="list-unstyled container" ng-controller="UserController as $ctrl">
-    <li class="input-group row">
-        <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-        <input type="text" class="form-control" ng-model="$ctrl.search">
+    <li class="row">
+        <div class="col-xs-6 input-group" style="float: left;">
+            <span class="input-group-addon">firstName</span>
+            <input type="text" class="form-control" ng-model="$ctrl.search.firstName">
+        </div>
+        <div class="col-xs-6 input-group">
+            <span class="input-group-addon">lastName</span>
+            <input type="text" class="form-control" ng-model="$ctrl.search.lastName">
+        </div>
     </li>
     <li ng-repeat="user in $ctrl.users | filter : $ctrl.search "
         ng-click="$ctrl.delete ($index)"
