--- a/src/index.html
+++ b/src/index.html
@@ -27,16 +27,17 @@
 </div>
 <ul class="list-unstyled container" ng-controller="UserController as $ctrl">
     <li class="row">
+        <button class="btn btn-primary col-xs-1 col-xs-offset-11" ng-click="$ctrl.$user.refresh()"><i class="glyphicon glyphicon-refresh"></i></button>
         <div class="col-xs-6 input-group" style="float: left;">
             <span class="input-group-addon">firstName</span>
             <input type="text" class="form-control" ng-model="$ctrl.search.firstname">
         </div>
-        <div class="col-xs-6 input-group">
+        <div class="col-xs-6 col-xs-offset-6 input-group">
             <span class="input-group-addon">lastName</span>
             <input type="text" class="form-control" ng-model="$ctrl.search.lastname">
         </div>
     </li>
-    <li ng-repeat="user in $ctrl.$user.users | filter : $ctrl.search "
+    <li ng-repeat="user in $ctrl.$user.users | filter : $ctrl.search | limitTo : 8 : -8"
         ng-click="$ctrl.delete ($index)"
         class="user row"
         ng-class-even="'even'"
