--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>msg</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../dist/style.css">
 </head>
+
+<!--
+
+// npm config set proxy http://proxy.msg.de:3128
+// npm config set https-proxy http://proxy.msg.de:3128
+
+-->
+
+
 <body class="container">
 
     <script src="../node_modules/systemjs/dist/system.js"></script>
@@ -18,6 +27,11 @@
             console.error (err);
         })
     </script>
+
+    <div class="jumbotron">
+        <h1>Hello World</h1>
+    </div>
+    <button class="btn btn-primary" id="btn">Hello</button>
 
 </body>
 </html>
