--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         ng-class-even="'even'"
         ng-class-odd="'odd'">
         <span class="col-xs-6"><i class="glyphicon glyphicon-user"></i> {{user.firstname}}</span>
-        <span class="col-xs-6">{{user.lastname}}</span>
+        <span class="col-xs-6">{{user.lastname | reverse}}</span>
     </li>
 
 </ul>
