--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
 </div>
 <ul class="list-unstyled container" ng-controller="UserController as $ctrl">
     <li class="row">
+        <button class="btn btn-primary col-xs-1 col-xs-offset-10" ng-click="$ctrl.clr = 'yellow'"><i class="glyphicon glyphicon-bell"></i></button>
         <button class="btn btn-primary col-xs-1 col-xs-offset-11" ng-click="$ctrl.$user.refresh()"><i class="glyphicon glyphicon-refresh"></i></button>
         <div class="col-xs-6 input-group" style="float: left;">
             <span class="input-group-addon">firstName</span>
@@ -41,7 +42,9 @@
         ng-click="$ctrl.delete ($index)"
         class="user row"
         ng-class-even="'even'"
-        ng-class-odd="'odd'">
+        ng-class-odd="'odd'"
+        do-hover="{{$ctrl.clr}}"
+    >
         <span class="col-xs-6"><i class="glyphicon glyphicon-user"></i> {{user.firstname}}</span>
         <span class="col-xs-6">{{user.lastname | reverse}}</span>
     </li>
