--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>msg</title>
+    <title>{{myNameIs}}</title>
     <link rel="stylesheet" href="../dist/style.css">
 </head>
 
@@ -14,7 +14,7 @@
 -->
 
 
-<body class="container">
+<body class="container" >
 
     <script src="../node_modules/systemjs/dist/system.js"></script>
     <script src="../node_modules/jquery/dist/jquery.js"></script>
