--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{myNameIs}}</title>
+    <title>msg</title>
     <link rel="stylesheet" href="../dist/style.css">
 </head>
-
-<!--
-
-// npm config set proxy http://proxy.msg.de:3128
-// npm config set https-proxy http://proxy.msg.de:3128
-
--->
-
 
 <body class="container" >
 
@@ -28,9 +20,12 @@
         })
     </script>
 
-    <div class="jumbotron">
+    <div class="jumbotron" ng-controller="BindingController as $ctrl">
         <h1>Hello World</h1>
+        <p>{{$ctrl.getName( 'Name:= ')}}</p>
+        <p ng-bind-html="$ctrl.getName( 'Name: ')"></p>
     </div>
+
     <button class="btn btn-primary" id="btn">Hello</button>
 
 </body>
