--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,6 @@
 </div>
 <ul class="list-unstyled container" ng-controller="UserController as $ctrl">
     <li class="row">
-        <button class="btn btn-primary col-xs-1 col-xs-offset-10" ng-click="$ctrl.clr = 'yellow'"><i class="glyphicon glyphicon-bell"></i></button>
         <button class="btn btn-primary col-xs-1 col-xs-offset-11" ng-click="$ctrl.$user.refresh()"><i class="glyphicon glyphicon-refresh"></i></button>
         <div class="col-xs-6 input-group" style="float: left;">
             <span class="input-group-addon">firstName</span>
@@ -43,7 +42,7 @@
         class="user row"
         ng-class-even="'even'"
         ng-class-odd="'odd'"
-        do-hover="{{$ctrl.clr}}"
+        do-hover="$ctrl.doHover"
     >
         <span class="col-xs-6"><i class="glyphicon glyphicon-user"></i> {{user.firstname}}</span>
         <span class="col-xs-6">{{user.lastname | reverse}}</span>
