--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,9 @@
     <h1 class="header" ng-cloak="">{{$ctrl.name}}</h1>
 
 </div>
+
+<user-header></user-header>
+
 <ul class="list-unstyled container" ng-controller="UserController as $ctrl">
     <li class="row">
         <button class="btn btn-primary col-xs-1 col-xs-offset-11" ng-click="$ctrl.$user.refresh()"><i class="glyphicon glyphicon-refresh"></i></button>
