--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
 
 </div>
 
-<user-header></user-header>
+<user-header>
+    <h2>it works</h2>
+</user-header>
 
 <ul class="list-unstyled container" ng-controller="UserController as $ctrl">
     <li class="row">
