--- a/src/index.html
+++ b/src/index.html
@@ -48,14 +48,14 @@
         </div>
     </li>
     <li ng-repeat="user in $ctrl.$user.users | filter : $ctrl.search | limitTo : 8 : -8"
-        ng-click="$ctrl.delete ($index)"
         class="user row"
         ng-class-even="'even'"
         ng-class-odd="'odd'"
-        do-hover="$ctrl.doHover"
-    >
-        <span class="col-xs-6"><i class="glyphicon glyphicon-user"></i> {{user.firstname}}</span>
-        <span class="col-xs-6">{{user.lastname | reverse}}</span>
+        do-hover="$ctrl.doHover">
+        <user-name class="col-xs-12"
+                   user="user"
+                   delete="$ctrl.delete($event)"
+        ></user-name>
     </li>
 
 </ul>
