--- a/src/index.html
+++ b/src/index.html
@@ -20,45 +20,9 @@
     })
 </script>
 
-<div class="jumbotron" ng-controller="BindingController as $ctrl" ng-switch="$ctrl.content">
-
-    <h1 class="header" ng-cloak="">{{$ctrl.name}}</h1>
-
-</div>
-
-<div class="col-xs-12" ng-init="header='überschrift'">
-    <div class="input-group">
-        <span class="input-group-addon">header</span>
-        <input type="text" class="form-control" ng-model="header">
-    </div>
-    <user-header title="header"></user-header>
-</div>
-
-
-<ul class="list-unstyled container" ng-controller="UserController as $ctrl">
-    <li class="row">
-        <button class="btn btn-primary col-xs-1 col-xs-offset-11" ng-click="$ctrl.$user.refresh()"><i class="glyphicon glyphicon-refresh"></i></button>
-        <div class="col-xs-6 input-group" style="float: left;">
-            <span class="input-group-addon">firstName</span>
-            <input type="text" class="form-control" ng-model="$ctrl.search.firstname">
-        </div>
-        <div class="col-xs-6 col-xs-offset-6 input-group">
-            <span class="input-group-addon">lastName</span>
-            <input type="text" class="form-control" ng-model="$ctrl.search.lastname">
-        </div>
-    </li>
-    <li ng-repeat="user in $ctrl.$user.users | filter : $ctrl.search | limitTo : 8 : -8"
-        class="user row"
-        ng-class-even="'even'"
-        ng-class-odd="'odd'"
-        do-hover="$ctrl.doHover">
-        <user-name class="col-xs-12"
-                   user="user"
-                   delete="$ctrl.delete($event)"
-        ></user-name>
-    </li>
-
-</ul>
+<app-root name="'msg'">
+    ...loading
+</app-root>
 
 
 </body>
