--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,13 @@
      ng-controller="BindingController as $ctrl"
      ng-class="{'yellow': $ctrl.checkYellow(), 'red': $ctrl.checked}"
 >
-    <h1 ng-if="$ctrl.checked">Hello World</h1>
+
+    <div class="input-group">
+        <span class="input-group-addon">color</span>
+        <input type="text" class="form-control" ng-model="$ctrl.color">
+    </div>
+
+    <h1 ng-if="!$ctrl.checked" do-hover="$ctrl.color">Hello World</h1>
 
     <img ng-src="http://cdn2.spiegel.de/{{$ctrl.imgFolder}}/{{$ctrl.imgFile}}" alt="" class="img-thumbnail">
 
@@ -93,7 +99,7 @@
         ng-class-even="'even'"
     >
         <span class="col-xs-6"><i class="glyphicon glyphicon-user"></i> {{::user.firstname}}</span>
-        <span class="col-xs-6">{{::user.lastname}}</span>
+        <span class="col-xs-6">{{::user.lastname | reverse }}</span>
     </li>
 </ul>
 
