--- a/src/index.html
+++ b/src/index.html
@@ -36,10 +36,14 @@
     })
 </script>
 
+<!--
 <div class="jumbotron"
      ng-controller="BindingController as $ctrl"
      ng-class="{'yellow': $ctrl.checkYellow(), 'red': $ctrl.checked}"
 >
+
+    <user-header title="::$ctrl.headerTitle"
+                 update="$ctrl.headerWasUpdate( $event )"></user-header>
 
     <div class="input-group">
         <span class="input-group-addon">color</span>
@@ -81,25 +85,30 @@
             ng-click="$ctrl.onClick( 'cool', $event )">Hello
     </button>
 </div>
+-->
+
 
 <ul class="list-unstyled container" ng-controller="UserController as $ctrl">
     <li class="row">
         <div class="col-xs-6 input-group" style="float: left;">
             <span class="input-group-addon">firstName</span>
-            <input type="text" class="form-control" ng-model="$ctrl.search.firstName">
+            <input type="text" class="form-control" ng-model="$ctrl.search.firstname">
         </div>
         <div class="col-xs-6 input-group">
             <span class="input-group-addon">lastName</span>
-            <input type="text" class="form-control" ng-model="$ctrl.search.lastName">
+            <input type="text" class="form-control" ng-model="$ctrl.search.lastname">
         </div>
     </li>
     <li class="row"
-            ng-repeat="user in $ctrl.$user.users | limitTo : 5 : -5 | orderBy : 'id' : true | filter : $ctrl.search"
+            ng-repeat="user in $ctrl.$user.users | limitTo : 10 : -10 | orderBy : 'id' : true | filter : $ctrl.search"
         ng-class-odd="'odd'"
         ng-class-even="'even'"
     >
-        <span class="col-xs-6"><i class="glyphicon glyphicon-user"></i> {{::user.firstname}}</span>
-        <span class="col-xs-6">{{::user.lastname | reverse }}</span>
+
+        <user-name user="user"
+                   delete="$ctrl.$user.delete( $event )">
+        </user-name>
+
     </li>
 </ul>
 
